[package]
name = "bonkers"
authors = ["Rawley Charron"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/racharron/bonkers"
description = "An implementation of behavior oriented concurrency"
resolver = "2"
keywords = ["concurrency", "cown", "behavior", "threadpool"]

[features]
rayon = ["dep:rayon-core"]
threadpool = ["dep:threadpool"]

[dependencies]
rayon-core = { version =  "1", optional = true }
threadpool = { version = "1", optional = true }
slice-dst = "1"
erasable = "1"
tagptr = "0.2"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["plotters", "cargo_bench_support"] }
rand = { version = "0.8", features = ["small_rng"] }

[[bench]]
name = "thread_pools"
harness = false
required-features = ["rayon", "threadpool"]

[[bench]]
name = "linear"
harness = false
required-features = ["rayon", "threadpool"]

[[bench]]
name = "recursive_shuffle"
harness = false
required-features = ["rayon", "threadpool"]

[package.metadata.docs.rs]
all-features = true
